# filimon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml
src/: args.rs  check.rs  cli.rs  crawler.rs  extractor.rs  main.rs  models.rs  output.rs  preprocessor.rs  scorer.rs
