[package]
name = "filimon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3"
watchexec = "8.0.1"
watchexec-signals = "5.0.0"
tokio = { version = "1.28", features = ["full"] }
miette ={ version = "7", features = ["fancy"]}
